# WebSockets

./: CMakeLists.txt
Client/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Server/src/: CMakeLists.txt
